--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -23,6 +23,7 @@
 
         <item
             android:title="Settings"
+            android:id="@+id/settingsMenu"
             android:icon="@drawable/ic_settings"></item>
 
     </group>
