--- a/app/src/main/res/drawable/button_design.xml
+++ b/app/src/main/res/drawable/button_design.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <corners
-        android:radius="50dp"/>
-
     <solid
-        android:color="#9C27B0" />
+        android:color="#C8E6C9" />
+    <corners
+        android:radius="90dp"/>
 
 </shape>
