--- a/app/src/main/res/layout/activity_category_view.xml
+++ b/app/src/main/res/layout/activity_category_view.xml
@@ -52,8 +52,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:padding="5dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:id="@+id/recordBar"
                 android:background="#E8F5E9">
 
                 <TextView
