--- a/app/src/main/res/layout/activity_data_editor.xml
+++ b/app/src/main/res/layout/activity_data_editor.xml
@@ -136,7 +136,7 @@
                 android:layout_marginRight="20dp">
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:paddingTop="8dp"
@@ -164,7 +164,7 @@
                 android:layout_marginRight="20dp">
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:layout_height="wrap_content"
                     android:paddingTop="8dp"
                     android:textSize="20sp"
@@ -213,7 +213,7 @@
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="20dp">
+                android:layout_marginRight="1dp">
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -224,9 +224,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginLeft="5dp"
                     android:textColor="@color/black"
-                    android:textSize="13sp"
+                    android:gravity="end"
+                    android:textAlignment="textEnd"
                     android:id="@+id/repeatStatusSpinner"/>
             </RelativeLayout>
 
