--- a/app/src/main/res/layout/activity_categorised_data_viewer.xml
+++ b/app/src/main/res/layout/activity_categorised_data_viewer.xml
@@ -40,7 +40,7 @@
 
     </RelativeLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:id="@+id/scrollView"
         android:layout_height="wrap_content">
@@ -91,7 +91,7 @@
                     android:background="#E8F5E9"
                     android:padding="10dp"/>
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -102,5 +102,5 @@
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
