--- a/app/src/main/res/layout/activity_category_view.xml
+++ b/app/src/main/res/layout/activity_category_view.xml
@@ -30,7 +30,7 @@
             android:id="@+id/categoryNameInDialog" />
     </RelativeLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rowViewScrollView"
@@ -78,7 +78,7 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -86,11 +86,11 @@
                 android:layout_marginBottom="10dp"
                 android:id="@+id/rowDataViewRecycler">
 
-            </android.support.v7.widget.RecyclerView>
+            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
 
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
