--- a/app/src/main/res/layout/advance_filter_dialog.xml
+++ b/app/src/main/res/layout/advance_filter_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="wrap_content">
@@ -104,5 +104,5 @@
             </RelativeLayout>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
