--- a/app/src/main/res/layout/excess_spending_alert_dialog.xml
+++ b/app/src/main/res/layout/excess_spending_alert_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="15dp"
         android:layout_height="wrap_content">
@@ -47,6 +47,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
