--- a/app/src/main/res/layout/layout_schedule_data.xml
+++ b/app/src/main/res/layout/layout_schedule_data.xml
@@ -4,7 +4,7 @@
     android:id="@+id/relativeLayout"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="wrap_content">
@@ -27,7 +27,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:baselineAligned="false" android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -104,6 +104,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
