--- a/app/src/main/res/layout/layout_spending_recycler.xml
+++ b/app/src/main/res/layout/layout_spending_recycler.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="horizontal">
+        android:baselineAligned="false" android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -42,7 +42,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="3"
-            android:orientation="horizontal"
+            android:baselineAligned="false" android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_height="wrap_content">
 
