--- a/app/src/main/res/layout/layout_wallet_creator.xml
+++ b/app/src/main/res/layout/layout_wallet_creator.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="15dp"
         android:layout_height="wrap_content">
@@ -32,6 +32,6 @@
                 android:id="@+id/isActiveCheckBox"/>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
